# Pico-Assistant

./: .gitattributes  .gitignore  .gitmodules  App.cpp  App.hpp  CMakeLists.txt  FinalReport_SriramYadavalli.md  Makefile  README.md  VoiceApp.cpp  VoiceApp.hpp  WeatherApp.cpp  WeatherApp.hpp  app  main.cpp  no_voice_app_test.sh  read_sensor.py  weather_app_test.sh
HWInterfaces/: CMakeLists.txt
HWInterfaces/lib/display/: CMakeLists.txt  display.cpp  display.hpp
HWInterfaces/lib/micophone/: CMakeLists.txt  micophone.cpp  micophone.hpp
HWInterfaces/lib/sensor/: CMakeLists.txt  sensor.cpp  sensor.hpp
LLM/lib/: README.md
RPI3B_HW_LIB/: CMakeLists.txt  ReadSensor.cpp  ReadSensor.hpp  RecordAudio.cpp  RecordAudio.hpp  TerminalControl.cpp  TerminalControl.hpp
TFInference/: VoiceInference.cpp  VoiceInference.hpp  WeatherInference.cpp  WeatherInference.hpp
WakeWordDetection/lib/: README.md
data_set_generator/: generator.py  labels.txt
inference_test/: Makefile  labels.h  main.cpp  model_data.h
model/: model.py  pico_speech_model.h5
prediction_model/: convert_scalar.py  humidity_model.tflite  pr_weather_model.py  scaler_x.pkl  temperature_model.keras  temperature_model.tflite  weather_prediction.py
voice_model/: pico_speech_model.tflite  pico_speech_model_with_preprocessing.tflite  pyvenv.cfg
